cmake_minimum_required(VERSION 3.7)
project(Subscriber)

set(CMAKE_CXX_STANDARD 11)

include_directories(AFTER SYSTEM
        include
        include_iar
        Application
        include/cmsis_drivers
        include/Net
        include_cmsis_iar
        )


set(SOURCE_FILES
        include_iar/stdint.h
        include_iar/stdio.h
        include_iar/stdlib.h
        include_iar/string.h
        Application/app_cfg.h
        Application/DHCP_client.c
        Application/fsm_deteccion.c
        Application/iButtons.c
        Application/lpc17xx_libcfg.h
        Application/main.c
        Application/net_cfg.h
        Application/radar.c
        Application/TI_aes.c
        Application/udpserver.c
        Application/zonescan.c
        Autoprotect/autoprotect.c
        BSP/cpu_bsp.c
        BSP/system_LPC17xx.c
        Connection/protocols.c
        Connection/rabbit.c
        Console/console.c
        Console/telnet_console.c
        DataFlash/DataFlash.c
        include/cmsis_drivers/debug_frmwrk.h
        include/cmsis_drivers/lpc17xx_adc.h
        include/cmsis_drivers/lpc17xx_can.h
        include/cmsis_drivers/lpc17xx_clkpwr.h
        include/cmsis_drivers/lpc17xx_dac.h
        include/cmsis_drivers/lpc17xx_emac.h
        include/cmsis_drivers/lpc17xx_exti.h
        include/cmsis_drivers/lpc17xx_gpdma.h
        include/cmsis_drivers/lpc17xx_gpio.h
        include/cmsis_drivers/lpc17xx_i2c.h
        include/cmsis_drivers/lpc17xx_i2s.h
        include/cmsis_drivers/lpc17xx_libcfg_default.h
        include/cmsis_drivers/lpc17xx_mcpwm.h
        include/cmsis_drivers/lpc17xx_nvic.h
        include/cmsis_drivers/lpc17xx_pinsel.h
        include/cmsis_drivers/lpc17xx_pwm.h
        include/cmsis_drivers/lpc17xx_qei.h
        include/cmsis_drivers/lpc17xx_rit.h
        include/cmsis_drivers/lpc17xx_rtc.h
        include/cmsis_drivers/lpc17xx_spi.h
        include/cmsis_drivers/lpc17xx_ssp.h
        include/cmsis_drivers/lpc17xx_systick.h
        include/cmsis_drivers/lpc17xx_timer.h
        include/cmsis_drivers/lpc17xx_uart.h
        include/cmsis_drivers/lpc17xx_wdt.h
        include/cmsis_drivers/lpc_types.h
        include/Include/arm_common_tables.h
        include/Include/arm_math.h
        include/Include/core_cm0.h
        include/Include/core_cm0plus.h
        include/Include/core_cm3.h
        include/Include/core_cm4.h
        include/Include/core_cm4_simd.h
        include/Include/core_cmFunc.h
        include/Include/core_cmInstr.h
        include/Include/core_sc000.h
        include/Include/core_sc300.h
        include/Net/net.h
        include/Net/net_app.h
        include/Net/net_arp.h
        include/Net/net_ascii.h
        include/Net/net_bsd.h
        include/Net/net_bsp.h
        include/Net/net_buf.h
        include/Net/net_cfg_net.h
        include/Net/net_conn.h
        include/Net/net_ctr.h
        include/Net/net_dbg.h
        include/Net/net_def.h
        include/Net/net_err.h
        include/Net/net_icmp.h
        include/Net/net_if.h
        include/Net/net_if_pkt.h
        include/Net/net_igmp.h
        include/Net/net_ip.h
        include/Net/net_mgr.h
        include/Net/net_nic.h
        include/Net/net_nic_def.h
        include/Net/net_os.h
        include/Net/net_phy.h
        include/Net/net_phy_def.h
        include/Net/net_sock.h
        include/Net/net_stat.h
        include/Net/net_tcp.h
        include/Net/net_tmr.h
        include/Net/net_type.h
        include/Net/net_udp.h
        include/Net/net_util.h
        include/autoprotect.h
        include/bsp.h
        include/bsp_int.h
        include/console.h
        include/cpu.h
        include/cpu_cfg.h
        include/cpu_core.h
        include/cpu_def.h
        include/csp.h
        include/csp_cfg.h
        include/csp_dev.h
        include/csp_grp.h
        include/csp_types.h
        include/DataFlash.h
        include/dhcp.h
        include/eeprom_map.h
        include/fsm_deteccion.h
        include/ibuttons.h
        include/includes.h
        include/lan485.h
        include/lib_ascii.h
        include/lib_cfg.h
        include/lib_def.h
        include/lib_math.h
        include/lib_mem.h
        include/lib_str.h
        include/log_event.h
        include/LPC17xx.h
        include/mem_i2c.h
        include/modem.h
        include/os.h
        include/os_app_hooks.h
        include/os_cfg.h
        include/os_cfg_app.h
        include/os_cpu.h
        include/os_csp.h
        include/os_type.h
        include/protocols.h
        include/rabbit.h
        include/radar.h
        include/serial.h
        include/system_LPC17xx.h
        include/tabla_ibuttons0.h
        include/tabla_ibuttons5.h
        include/tabla_ibuttons6.h
        include/tabla_ibuttons7.h
        include/tablasIbutton1.h
        include/telnet.h
        include/telnet_console.h
        include/telnet_server.h
        include/TI_aes.h
        include/udpserver.h
        include/unixtime.h
        include/utils.h
        include/zonescan.h
        Lan485/lan485.c
        LogEventos/log_event.c
        LPC1769_CMSIS_Driver/debug_frmwrk.c
        LPC1769_CMSIS_Driver/lpc17xx_adc.c
        LPC1769_CMSIS_Driver/lpc17xx_can.c
        LPC1769_CMSIS_Driver/lpc17xx_clkpwr.c
        LPC1769_CMSIS_Driver/lpc17xx_dac.c
        LPC1769_CMSIS_Driver/lpc17xx_emac.c
        LPC1769_CMSIS_Driver/lpc17xx_exti.c
        LPC1769_CMSIS_Driver/lpc17xx_gpdma.c
        LPC1769_CMSIS_Driver/lpc17xx_gpio.c
        LPC1769_CMSIS_Driver/lpc17xx_i2c.c
        LPC1769_CMSIS_Driver/lpc17xx_i2s.c
        LPC1769_CMSIS_Driver/lpc17xx_libcfg_default.c
        LPC1769_CMSIS_Driver/lpc17xx_mcpwm.c
        LPC1769_CMSIS_Driver/lpc17xx_nvic.c
        LPC1769_CMSIS_Driver/lpc17xx_pinsel.c
        LPC1769_CMSIS_Driver/lpc17xx_pwm.c
        LPC1769_CMSIS_Driver/lpc17xx_qei.c
        LPC1769_CMSIS_Driver/lpc17xx_rit.c
        LPC1769_CMSIS_Driver/lpc17xx_rtc.c
        LPC1769_CMSIS_Driver/lpc17xx_spi.c
        LPC1769_CMSIS_Driver/lpc17xx_ssp.c
        LPC1769_CMSIS_Driver/lpc17xx_systick.c
        LPC1769_CMSIS_Driver/lpc17xx_timer.c
        LPC1769_CMSIS_Driver/lpc17xx_uart.c
        LPC1769_CMSIS_Driver/lpc17xx_wdt.c
        mem_i2c/mem_i2c.c
        Micrium/uC_CPU/cpu_c.c
        Micrium/uC_CPU/cpu_core.c
        Micrium/uC_CSP/csp_dma.c
        Micrium/uC_CSP/csp_gpio.c
        Micrium/uC_CSP/csp_int.c
        Micrium/uC_CSP/csp_pm.c
        Micrium/uC_LIB/lib_ascii.c
        Micrium/uC_LIB/lib_math.c
        Micrium/uC_LIB/lib_mem.c
        Micrium/uC_LIB/lib_str.c
        Micrium/uC_OS_III/os_cfg_app.c
        Micrium/uC_OS_III/os_core.c
        Micrium/uC_OS_III/os_cpu_c.c
        Micrium/uC_OS_III/os_csp.c
        Micrium/uC_OS_III/os_dbg.c
        Micrium/uC_OS_III/os_flag.c
        Micrium/uC_OS_III/os_int.c
        Micrium/uC_OS_III/os_mem.c
        Micrium/uC_OS_III/os_msg.c
        Micrium/uC_OS_III/os_mutex.c
        Micrium/uC_OS_III/os_pend_multi.c
        Micrium/uC_OS_III/os_prio.c
        Micrium/uC_OS_III/os_q.c
        Micrium/uC_OS_III/os_sem.c
        Micrium/uC_OS_III/os_stat.c
        Micrium/uC_OS_III/os_task.c
        Micrium/uC_OS_III/os_tick.c
        Micrium/uC_OS_III/os_time.c
        Micrium/uC_OS_III/os_tmr.c
        Micrium/uC_OS_III/os_var.c
        Micrium/uC_TCPIP/BSD_Socket_Layer/net_bsd.c
        Micrium/uC_TCPIP/BSD_Socket_Layer/net_sock.c
        Micrium/uC_TCPIP/IF_Layer/net_if.c
        Micrium/uC_TCPIP/IF_Layer/net_if_pkt.c
        Micrium/uC_TCPIP/NIC_Layer/net_bsp.c
        Micrium/uC_TCPIP/NIC_Layer/net_nic.c
        Micrium/uC_TCPIP/NIC_Layer/net_phy.c
        Micrium/uC_TCPIP/TCPIP_Layer/net.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_arp.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_ascii.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_buf.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_conn.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_ctr.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_dbg.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_err.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_icmp.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_ip.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_os.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_stat.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_tcp.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_tmr.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_udp.c
        Micrium/uC_TCPIP/TCPIP_Layer/net_util.c
        Modem/modem.c
        Serial/serial.c
        Timestamp/time.c
        Iridium/IridiumSBD.c
        Utils/utils.c)

add_executable(Subscriber ${SOURCE_FILES})